# pwd

./: README_TEMPLATE.md  oneplus_15_detailed_analysis.md  oneplus_15_pubg_research.md  oneplus_15_pubg_summary.md  output.txt  pyproject.toml  research_email_cli.py
.claude/commands/: generate-pydantic-ai-prp.md
.github/: research_prompt.md
.github/workflows/: claude-fix.yml  claude-research.yml  claude-review.yml  codex-fix.yml  codex-review.yml  cursor-fix.yml  cursor-review.yml
research/: .gitkeep  README.md  do_research_on_one_plus_15_pubg_performance.md  do_research_on_one_plus_15_pubg_performance_please.md
